cabal-version:      3.0
name:               gyler
version:            0.1.0
synopsis:           Interface for gyle.altlinux.org
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Leonid Znamenok
maintainer:         respublica@altlinux.org
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
  exposed-modules:     Gyler.CachedFile
                      ,Gyler.CachedFile.Internal

                      ,Gyler.GirarEntity
                      ,Gyler.GirarEntity.Branches
                      ,Gyler.GirarEntity.Maintainers

                      ,Gyler.Utils.List

                      ,Gyler.GylerM
                      ,Gyler.GirarEnv

                      ,Gyler.GirarCommand

                      ,Gyler.Context.Ssh
                      ,Gyler.Context.Curl
                      ,Gyler.Context.Commands
                      ,Gyler.Context.Gyler
                      ,Gyler.Context

                      ,Gyler.Types

  hs-source-dirs:      src

  build-depends:      ,base >=4.7 && <5
                      ,process
                      ,bytestring
                      ,text
                      ,directory
                      ,time
                      ,mtl
                      ,lens
                      ,filepath
                      ,typed-process

  default-language:    Haskell2010

test-suite gyler-tests
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Gyler.CachedFileSpec
                       Gyler.GirarCommandSpec

                       Gyler.GirarEntity.BranchesSpec
                       Gyler.GirarEntity.MaintainersSpec

                       TestUtils

  build-depends:      ,base >=4.7 && <5
                      ,gyler
                      ,hspec
                      ,bytestring
                      ,text
                      ,directory
                      ,process
                      ,temporary
                      ,time
                      ,filepath
                      ,random
                      ,lens

  default-language:    Haskell2010


executable gyler
    import:           warnings
    main-is:          Main.hs

--    other-modules:   ,Gyler.CachedFile

    build-depends:   ,base >=4.7 && <5
                     ,optparse-applicative
                     ,process
                     ,bytestring
                     ,directory
                     ,time

    hs-source-dirs:   app
    default-language: Haskell2010
