cabal-version:      3.0
name:               gyler
version:            0.1.0
synopsis:           Interface for gyle.altlinux.org
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Leonid Znamenok
maintainer:         respublica@altlinux.org
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
  exposed-modules:     Gyler.CachedFile
                      ,Gyler.CachedFile.Internal

                      ,Gyler.Domain.Maintainer
                      ,Gyler.Domain.Branch
                      ,Gyler.Domain.PushableBranch
                      ,Gyler.Domain.State

                      ,Gyler.Domain.RPM.EVR.Epoch

                      ,Gyler.FetchSpec
                      ,Gyler.FetchSpec.MaintainersQuery
                      ,Gyler.FetchSpec.BranchesQuery
                      ,Gyler.FetchSpec.PushableBranchesQuery
                      ,Gyler.FetchSpec.StatesQuery

                      ,Gyler.Utils.List
                      ,Gyler.Utils.Errors
                      ,Gyler.Utils.Maybe

                      ,Gyler.Parsers

                      ,Gyler.GylerM
                      ,Gyler.GirarEnv

                      ,Gyler.GirarCommand

                      ,Gyler.Context.Ssh
                      ,Gyler.Context.Curl
                      ,Gyler.Context.Commands
                      ,Gyler.Context

                      ,Gyler.Classes.IsText

                      ,Gyler.Classes.RuntimeValidated
                      ,Gyler.Classes.RuntimeValidated.Internal

                      ,Gyler.Types

                      ,Gyler.Data.ValidContainer
                      ,Gyler.Data.ValidContainer.HashSet

                      ,Gyler.Data.NonEmptyText
                      ,Gyler.Data.NonEmptyText.QQ

                      ,Gyler.Logging

                      ,Gyler.Serialize.Text

  hs-source-dirs:      src

  build-depends:      ,base >=4.7 && <5
                      ,process
                      ,bytestring
                      ,text
                      ,directory
                      ,time
                      ,mtl
                      ,transformers
                      ,lens
                      ,filepath
                      ,typed-process
                      ,deepseq
                      ,template-haskell
                      ,cereal
                      ,hashable
                      ,unordered-containers
                      ,megaparsec
                      ,fast-logger

  default-language:    Haskell2010

test-suite gyler-tests
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Gyler.CachedFileSpec
                       Gyler.GirarCommandSpec
                       Gyler.LoggingSpec

                       Gyler.Data.NonEmptyText.Unsafe
                       Gyler.Data.NonEmptyText.Arbitrary
                       Gyler.Data.NonEmptyTextSpec

                       Gyler.Data.ValidContainer.HashSetSpec

                       Gyler.Domain.RPMSpec
                       Gyler.Domain.RPM.EVRSpec
                       Gyler.Domain.RPM.EVR.EpochSpec

                       TestUtils

                       TestUtils.FetchSpec
                       TestUtils.FetchSpec.Template

                       TestUtils.RuntimeValidated.Template

  build-depends:      ,base >=4.7 && <5
                      ,gyler
                      ,hspec
                      ,QuickCheck
                      ,quickcheck-instances
                      ,hashable
                      ,cereal
                      ,bytestring
                      ,text
                      ,directory
                      ,process
                      ,temporary
                      ,time
                      ,filepath
                      ,random
                      ,lens
                      ,megaparsec
                      ,mtl
                      ,containers

  default-language:    Haskell2010


executable gyler
    import:           warnings
    main-is:          Main.hs

--    other-modules:   ,Gyler.CachedFile

    build-depends:   ,base >=4.7 && <5
                     ,optparse-applicative
                     ,process
                     ,bytestring
                     ,directory
                     ,time

    hs-source-dirs:   app
    default-language: Haskell2010
